tests/check/illegal_within.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_within(f32 [3, ?, 18] a, s16 [?, 4] b) {
  x = 3;
  with a = {x, y} in a.span {}        // unmatched count
  with idx = {x, y, z} in b.span {}   // unmatched count
  with {x, y, z} in [3, 4, 5, 6] {}   // unmatched
  with {x, y} in b.span {}            // ok
  with {x, y} in b.span, {x, y, z} in a.span {}  // redef
  with {x, y} in [2, 1], {x, y, z} in [1, 2, 3] {}  // redef
  with {x, y} in b.span, {w, b, z} in a.span where x<->w, y<->b {} // ok
  with {x, y} in b.span where x<->y {} // ok
  with {y, z} in b.span where x<->y {} // bad ref
}

// CHECK: error: un-matched with-matcher-count(2) and mdspan rank(3).
// CHECK: error: un-matched with-matcher-count(3) and mdspan rank(2).
// CHECK: error: un-matched with-matcher-count(3) and mdspan rank(4).
// CHECK: error: symbol `x' has been declared already.
// CHECK: error: symbol `y' has been declared already.
// CHECK: error: symbol `x' has been declared already.
// CHECK: error: symbol `y' has been declared already.
// CHECK: info: symbol `x' has been defined inside the with statement already.
// CHECK: info: symbol `y' has been defined inside the with statement already
// CHECK: error: symbol `x' is not defined inside the with statement.
// CHECK: Totally 8 errors have been detected.
